[package]
name = "debussy"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
mpris = { git = "https://github.com/Mange/mpris-rs" }
pretty_env_logger = "0.5.0"
serde = { version="1.0.160", features=["serde_derive"]}
serde_json = "1.0.96"
